# clockwise

./: .gitignore  README.md  pyproject.toml
blog/: linkedin-clockwise.md
docs/: design.md  plan.md
docs/results/: m_bar_sweep.csv  m_bar_table.csv  model_control.csv
materials/: README.md
scripts/: collage_video.py  compare_models.py  make_rotation_media.py  steering_demo.py  validate_against_data.py
src/clockwise/: __init__.py  analysis.py  arena.py  cli.py  config.py  experiment.py  models.py  polarization.py  roaming.py
tests/: test_analysis.py  test_arena.py  test_cli.py  test_config.py  test_experiment_smoke.py  test_models.py  test_polarization.py  test_roaming.py
