[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clockwise"
version = "0.1.0"
description = "Does counterclockwise crowd motion emerge in JuPedSim? A test of Echeverria-Huarte et al. (2026)."
requires-python = ">=3.11"
dependencies = ["jupedsim>=1.4", "shapely>=2.0", "pandas>=2.0", "matplotlib>=3.7"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff"]

[project.scripts]
clockwise = "clockwise.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
